# SunoCli

./: .env.example  .ruff.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.githooks/: pre-commit
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: auto-merge.yml  ci.yaml  publish.yml  sync-from-docs.yml
commands/: generate.py  info.py  lyrics.py  media.py  persona.py  task.py
core/: client.py  config.py  exceptions.py  output.py
deploy/: run.sh
deploy/production/: deployment.yaml  service.yaml
suno_cli/: __init__.py  __main__.py  main.py
suno_cli/commands/: generate.py  info.py  lyrics.py  media.py  persona.py  task.py
suno_cli/core/: client.py  config.py  exceptions.py  output.py
tests/: conftest.py  test_client.py  test_commands.py  test_config.py  test_integration.py  test_output.py
